Fix #101: Awkwards gaps (#120)
* Fix home gap 1: Articles being too fat

* Fix home gap #2: Contact form being too fat

* Fix resilience gap: link too long

* Fix global gaps: Banner text too big on small

* Fix Research and Pub titling: Use Title Component

* Fix resilience padding: Mindful excercises too small

* Fix ultrawide viewports: added Container to TextAndPic
@LemonFace0309. the className `fluid` maks the container span the whole
width of the viewport

* Made button hover little bit more noticable

* Apply formatting changes

* Break up text and image
also added TextAndPic optional image choice

* Apply formatting changes

* heading

--- a/components/ResilienceResource/CovidBanner.module.css
+++ b/components/ResilienceResource/CovidBanner.module.css
@@ -8,11 +8,12 @@
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
-  margin: 10px 60px;
+  /* margin: 10px 60px; */
   color: white;
 }
 
 .CovidBanner p {
   color: white;
   text-align: center;
+  word-wrap: break-word;
 }
